# pic-factor-loader

./: .gitignore  Dockerfile  README.md  pyproject.toml
db/: factor_loader_config.sql  factor_returns.sql
notebooks/: dfs.py  helpers.py  testing.ipynb
src/factor_loader/: __main__.py  date_helpers.py  loader_config.py
src/factor_loader/model/: __init__.py  base.py  base_data.py  config.py  entity.py  factor_returns.py  metrics_data.py
src/factor_loader/persistence/: source.py  target.py
src/factor_loader/queries/: __init__.py  factor_loader_config.py  factor_returns.py
